force-app/main/default/objects/Whiteboard_Markings__c/Whiteboard_Markings__c.object-meta.xml
<CustomObject>
    <label>Whiteboard Marking</label>
    <nameField>
        <displayFormat>Markings-{000000}</displayFormat>
        <label>Whiteboard Markings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Whiteboard Markings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>