force-app/main/default/objects/Whiteboard_Markings__c/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <label>Notification</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>